--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,6 +6,8 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Home Page</h1>
+    <a href="{% url 'login' %}">Explore</a> <!-- name : name in the urls -->
+    
 </body>
 </html>
