--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     {% include "nav.html" %}
+    <div id="notify_msg">
+        {% if messages %}
+            {% for message in messages %}
+                {{message}}
+            {% endfor %}
+        {% endif %}
+    </div>
     {% block content %}{% endblock content %}
+    <script src="{% static 'js/base.js' %}"></script>
 </body>
 </html>
