--- a/website/templates/nav.html
+++ b/website/templates/nav.html
@@ -1,9 +1,12 @@
 <nav>
     <ul>
+        {% if not user.is_authenticated %}
         <li><a href="{% url 'home' %}">Home</a></li> 
         <li><a href="{% url 'login' %}">Login</a></li>
-        {% comment %} <li><a href="{% url 'signup' %}">Signup</a></li> {% endcomment %}
-        <li><a href="{% url 'profile' %}">Profile</a></li>
+        <li><a href="{% url 'signup' %}">Signup</a></li>
+        {% else %}
+        {% comment %} <li><a href="{% url 'profile' %}">Profile</a></li> {% endcomment %}
         <li><a href="{% url 'logout' %}">Logout</a></li>
+        {% endif %}
     </ul>
 </nav>
